// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Happy path (production=false) 1`] = `
Object {
  "dependencies": Object {
    "lodash": "",
  },
  "description": "",
  "devDependencies": Object {
    "oc-template-es6-compiler": "",
  },
  "name": "es6-component",
  "oc": Object {
    "date": "",
    "files": Object {
      "dataProvider": Object {
        "hashKey": "34dcbf0e2925e34da43cd5f756d4ec95ead27ecc",
        "src": "server.js",
        "type": "node.js",
      },
      "static": Array [
        "assets",
      ],
      "template": Object {
        "hashKey": "bf6f2d67586ec877da0348aef6981a75891ab353",
        "src": "template.js",
        "type": "oc-template-es6",
        "version": "",
      },
    },
    "packaged": true,
    "version": "1.0.0",
  },
  "repository": "",
  "version": "1.0.0",
}
`;

exports[`Happy path (production=false) 2`] = `
Array [
  "../../../mocks/es6-component/_compile-tests-package/assets/css/style.css",
  "../../../mocks/es6-component/_compile-tests-package/assets/img/test.png",
  "../../../mocks/es6-component/_compile-tests-package/assets/js/lib.js",
  "../../../mocks/es6-component/_compile-tests-package/package.json",
  "../../../mocks/es6-component/_compile-tests-package/server.js",
  "../../../mocks/es6-component/_compile-tests-package/server.js.map",
  "../../../mocks/es6-component/_compile-tests-package/template.js",
]
`;

exports[`Happy path (production=true) 1`] = `
Object {
  "dependencies": Object {
    "lodash": "",
  },
  "description": "",
  "devDependencies": Object {
    "oc-template-es6-compiler": "",
  },
  "name": "es6-component",
  "oc": Object {
    "date": "",
    "files": Object {
      "dataProvider": Object {
        "hashKey": "9799c6ea51c6abca6180ee577e5f40beb3172a17",
        "src": "server.js",
        "type": "node.js",
      },
      "static": Array [
        "assets",
      ],
      "template": Object {
        "hashKey": "bf6f2d67586ec877da0348aef6981a75891ab353",
        "src": "template.js",
        "type": "oc-template-es6",
        "version": "",
      },
    },
    "packaged": true,
    "version": "1.0.0",
  },
  "repository": "",
  "version": "1.0.0",
}
`;

exports[`Happy path (production=true) 2`] = `
Array [
  "../../../mocks/es6-component/_compile-tests-package/assets/css/style.css",
  "../../../mocks/es6-component/_compile-tests-package/assets/img/test.png",
  "../../../mocks/es6-component/_compile-tests-package/assets/js/lib.js",
  "../../../mocks/es6-component/_compile-tests-package/package.json",
  "../../../mocks/es6-component/_compile-tests-package/server.js",
  "../../../mocks/es6-component/_compile-tests-package/template.js",
]
`;

exports[`Should handle empty static folder 1`] = `
Object {
  "dependencies": Object {
    "lodash": "",
  },
  "description": "",
  "devDependencies": Object {
    "oc-template-es6-compiler": "",
  },
  "name": "es6-component",
  "oc": Object {
    "date": "",
    "files": Object {
      "dataProvider": Object {
        "hashKey": "9799c6ea51c6abca6180ee577e5f40beb3172a17",
        "src": "server.js",
        "type": "node.js",
      },
      "static": Array [],
      "template": Object {
        "hashKey": "bf6f2d67586ec877da0348aef6981a75891ab353",
        "src": "template.js",
        "type": "oc-template-es6",
        "version": "",
      },
    },
    "packaged": true,
    "version": "1.0.0",
  },
  "repository": "",
  "version": "1.0.0",
}
`;

exports[`Should handle empty static folder 2`] = `
Array [
  "../../../mocks/es6-component/_compile-tests-package2/package.json",
  "../../../mocks/es6-component/_compile-tests-package2/server.js",
  "../../../mocks/es6-component/_compile-tests-package2/template.js",
]
`;

exports[`Should handle server.js-less components 1`] = `
Object {
  "dependencies": Object {
    "lodash": "",
  },
  "description": "",
  "devDependencies": Object {
    "oc-template-es6-compiler": "",
  },
  "name": "es6-component",
  "oc": Object {
    "date": "",
    "files": Object {
      "static": Array [
        "assets",
      ],
      "template": Object {
        "hashKey": "bf6f2d67586ec877da0348aef6981a75891ab353",
        "src": "template.js",
        "type": "oc-template-es6",
        "version": "",
      },
    },
    "packaged": true,
    "version": "1.0.0",
  },
  "repository": "",
  "version": "1.0.0",
}
`;

exports[`Should handle server.js-less components 2`] = `
Array [
  "../../../mocks/es6-component/_compile-tests-package4/assets/css/style.css",
  "../../../mocks/es6-component/_compile-tests-package4/assets/img/test.png",
  "../../../mocks/es6-component/_compile-tests-package4/assets/js/lib.js",
  "../../../mocks/es6-component/_compile-tests-package4/package.json",
  "../../../mocks/es6-component/_compile-tests-package4/template.js",
]
`;

exports[`Should normalise stringified static folder 1`] = `
Object {
  "dependencies": Object {
    "lodash": "",
  },
  "description": "",
  "devDependencies": Object {
    "oc-template-es6-compiler": "",
  },
  "name": "es6-component",
  "oc": Object {
    "date": "",
    "files": Object {
      "dataProvider": Object {
        "hashKey": "9799c6ea51c6abca6180ee577e5f40beb3172a17",
        "src": "server.js",
        "type": "node.js",
      },
      "static": Array [
        "assets",
      ],
      "template": Object {
        "hashKey": "bf6f2d67586ec877da0348aef6981a75891ab353",
        "src": "template.js",
        "type": "oc-template-es6",
        "version": "",
      },
    },
    "packaged": true,
    "version": "1.0.0",
  },
  "repository": "",
  "version": "1.0.0",
}
`;

exports[`Should normalise stringified static folder 2`] = `
Array [
  "../../../mocks/es6-component/_compile-tests-package3/assets/css/style.css",
  "../../../mocks/es6-component/_compile-tests-package3/assets/img/test.png",
  "../../../mocks/es6-component/_compile-tests-package3/assets/js/lib.js",
  "../../../mocks/es6-component/_compile-tests-package3/package.json",
  "../../../mocks/es6-component/_compile-tests-package3/server.js",
  "../../../mocks/es6-component/_compile-tests-package3/template.js",
]
`;

exports[`When files writing fails should return an error 1`] = `"sorry I failed"`;
